--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 <body>
     
 <header><h1>Leichtenstien</h1></header>
-
-<div class="Main1">
-    <div class="master">
-        <div class="F">The flight</div>
-        <div class="C">The city</div>
-        <div class="I">The island</div>
-        <div class="TF">The food</div>
+<div class="headdiv">
+    <div class="Main1">
+        <div class="master">
+            <div class="F">The flight</div>
+            <div class="C">The city</div>
+            <div class="I">The island</div>
+            <div class="TF">The food</div>
+        </div>
+        <div class="master1">
+            <p>Liechtenstein är en självständig konstitutionell monarki i Alperna i Centraleuropa, belägen mellan Schweiz och Österrike. </p> <p>Liechtenstein är en av Europas mikrostater. Statschefen har stor makt och kan bland annat inlägga veto mot nya lagar. </p> <p>Liechtenstein har den näst högsta inkomsten per capita i Europa, efter Monaco .</p>
+        </div>
     </div>
-    <div class="master1">
-        <p>Liechtenstein är en självständig konstitutionell monarki i Alperna i Centraleuropa, belägen mellan Schweiz och Österrike. </p> <p>Liechtenstein är en av Europas mikrostater. Statschefen har stor makt och kan bland annat inlägga veto mot nya lagar. </p> <p>Liechtenstein har den näst högsta inkomsten per capita i Europa, efter Monaco .</p>
+    
+    <div class="info">
+        <h1>Facts:</h1>
+        <li>Ställningen som finanscentrum och skatteparadis har gjort det till ett av världens rikaste länder räknat per invånare.</li>
+        <br>
+        <li>Den officiella valutan är schweiziska franc, men euro accepteras också .</li>
     </div>
 </div>
-
-<div class="info">
-    <h1>Facts:</h1>
-    <li>Ställningen som finanscentrum och skatteparadis har gjort det till ett av världens rikaste länder räknat per invånare.</li>
-    <br>
-    <li>Den officiella valutan är schweiziska franc, men euro accepteras också .</li>
-</div>
-
 <div class="skibidi"><p>Skapa den här sidan och visa den till Maryam när ni är klara</p></div>
 
 </body>
